WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303259
[GStreamer][WebRTC] Handle a=-prefixed ICE candidates
https://bugs.webkit.org/show_bug.cgi?id=303259
Summary
[GStreamer][WebRTC] Handle a=-prefixed ICE candidates
Philippe Normand
Reported
2025-11-29 09:09:14 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-11-29 09:20:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54578
EWS
Comment 2
2025-12-01 00:59:20 PST
Committed
303668@main
(5eedc39d6472): <
https://commits.webkit.org/303668@main
> Reviewed commits have been landed. Closing PR #54578 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-12-01 01:00:15 PST
<
rdar://problem/165603981
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug