[GStreamer][WebRTC] Handle a=-prefixed ICE candidates https://bugs.webkit.org/show_bug.cgi?id=303259

Reviewed by Xabier Rodriguez-Calvar.

Add backward compatibility for servers not respecting JSEP and using a a= prefix for ICE candidates.
This is explicitly ruled out in https://datatracker.ietf.org/doc/html/rfc8829#section-3.5.2.1 but
libwebrtc still allows it as well.

Canonical link: https://commits.webkit.org/303668@main